k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finquery
  labels:
    app: finquery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finquery
  template:
    metadata:
      labels:
        app: finquery
    spec:
      dnsPolicy: Default  # attempt to resolve dns resolution errors with e.g., api.smith.langchain.com
      volumes:
        - name: encrypted-conf
          persistentVolumeClaim:
            claimName: pvc-finquery-conf
        - name: decrypted-conf
          emptyDir: {}
      containers:
      - name: finquery
        image: finquery:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: decrypted-conf
            mountPath: /mnt/decrypted
            readOnly: true
        args:
          - "--server.baseUrlPath"
          - "/finquery"
        ports:
        - containerPort: 8501
          name: web
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /finquery/_stcore/health
            port: 8511
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /finquery/_stcore/health
            port: 8511
          initialDelaySeconds: 5
          periodSeconds: 5
