k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finquery
  labels:
    app: finquery
spec:
  selector:
    app: finquery
  ports:
  - port: 80
    targetPort: 8511
    name: web
  type: ClusterIP
