k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finquery
spec:
  rules:
  - http:
      paths:
      - path: /finquery
        pathType: Prefix
        backend:
          service:
            name: finquery
            port:
              number: 80
